Use Redisson native interfaces instead of byte[] encoding, other improvements